tests/baselines/reference/cloduleWithPriorInstantiatedModule.errors.txt
cloduleWithPriorInstantiatedModule.ts(2,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
cloduleWithPriorInstantiatedModule.ts(2,8): error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.
cloduleWithPriorInstantiatedModule.ts(13,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== cloduleWithPriorInstantiatedModule.ts (3 errors) ====
    // Non-ambient & instantiated module.
    module Moclodule {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
           ~~~~~~~~~
!!! error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.
        export interface Someinterface {
            foo(): void;
        }
        var x = 10;
    }
    
    class Moclodule {
    }
    
    // Instantiated module.
    module Moclodule {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class Manager {
        }
    }